<resources>
    <string name="app_name">Vivek Chatbot</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="search">search</string>
    <string name="chat">chat</string>
    <string name="add">add</string>
    <string name="p">p</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!--.....................................Google Map API...............................................................-->
    <string name="google_api">AIzaSyBNbR_Bdqi63lrpe0tWIycNXagdrkD-Ixc</string>
    <!--...................................................................................................................-->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_chatting_uiactivity">ChattingUIActivity</string>
</resources>